# phone_great_cards

./: .gitignore  current_user.db  db_connect.py  greatcards.kv  login.py  main.py  pyproject.toml
screens/: main_makets.py  main_window.py
screens/auth/: login.py  login_makets.py  login_services.py
screens/cards/: cards_services.py  collections.py  collections_makets.py
screens/english/: cards_services.py  logged_screens.py
screens/english/cards/: cards_services.py  collections.py  collections_makets.py
tools/: colors.py  const.py  decorators.py  funcs.py  mixin.py
